# codex_project

./: AGENTS.md  README.md  pyproject.toml
app/: dependencies.py  main.py
app/models/: lead.py
app/repositories/: lead.py
app/routers/: leads.py
tests/: test_leads.py
