[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-project"
version = "0.1.0"
description = "Codex project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic>=2",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",
    "ruff",
    "black",
]

[tool.setuptools.packages.find]
include = ["app*"]
